feat: Add sqlc benchmark and general adjustments

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Database
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=bookstore`
+POSTGRES_DB=bookstore
 POSTGRES_DSN=postgres://postgres:postgres@localhost:5432/bookstore?sslmode=disable
